# log4rust

./: Cargo.toml  README.md
examples/default/: Cargo.toml
examples/default/src/: main.rs
examples/file/: Cargo.toml
examples/file/src/: main.rs
examples/web/: Cargo.toml
examples/web/src/: main.rs
src/: config.rs  config.rs.bak  lib.rs  macro.rs
